# sox-noise

./: .gitignore  CHANGELOG.md  Justfile  Makefile  README.md  noxfile.py  pyproject.toml  thann.sox-noise.desktop
.github/workflows/: ci-checks.yml  release.yml
debian/: control  copyright  rules  sox-noise.install  sox-noise.sharedmimeinfo
src/sox_noise/: __init__.py
tests/: setup.bash  teardown.bash  test_window.py
